fix(css): disable letter spacing for Arabic
It breaks sentences into separate glyphs.

Fixes #2947

--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -2919,6 +2919,12 @@ h2.section-title.hp-style {
   text-transform: uppercase;
 }
 
+html:lang(ar) .section-title,
+html:lang(ar) h2.section-title.hp-style {
+  letter-spacing: 0;
+  text-transform: none;
+}
+
 .pricing-table {
   width: 100%;
   float: left;
